--- a/.github/workflows/toml_mitre_validation.yml
+++ b/.github/workflows/toml_mitre_validation.yml
@@ -7,6 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      #https://github.com/actions/setup-python
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11.4' 
       - run:
           python development/validation.py
           python development/mitre.py
