--- a/.github/workflows/toml_mitre_validation.yml
+++ b/.github/workflows/toml_mitre_validation.yml
@@ -12,5 +12,6 @@ jobs:
         with:
           python-version: '3.11.4' 
       - run:
+          pip install requests
           python development/validation.py
           python development/mitre.py
