--- a/.github/workflows/toml_mitre_validation.yml
+++ b/.github/workflows/toml_mitre_validation.yml
@@ -13,4 +13,5 @@ jobs:
           python-version: '3.11.4' 
       - run:
           python development/validation.py
+      - run:    
           python development/mitre.py
