--- a/.github/workflows/toml_mitre_validation.yml
+++ b/.github/workflows/toml_mitre_validation.yml
@@ -14,4 +14,5 @@ jobs:
       - run:
           python development/validation.py
       - run:    
+          pip install requests
           python development/mitre.py
