--- a/.github/workflows/toml_mitre_validation.yml
+++ b/.github/workflows/toml_mitre_validation.yml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11.4' 
+      - run: pip install --upgrade pip
+      - run: pip install requests
       - run:
           python development/validation.py
       - run:
