--- a/detections/excessive_web_traffic.toml
+++ b/detections/excessive_web_traffic.toml
@@ -4,9 +4,9 @@ author = ["Bohan"]
 description = "Triggers when more than 1000 queries to a web server have been observed in a 5 mins window. "
 from = "now-6m"
 name = "Excessive Web Traffic"
-risk_score = 50
+risk_score = 5033
 severity = "medium"
-type = "threshold"
+type = "threshold123"
 rule_id = "00000000-0000-0000-0000-000000000007"
 query = '''
 event.dataset: "zeek.http" 
