--- a/.github/workflows/toml_mitre_validation.yml
+++ b/.github/workflows/toml_mitre_validation.yml
@@ -3,7 +3,7 @@ name: TOML/Mitre Validation
 on:
   workflow_dispatch:
 jobs:
-  build:
+  toml-validation:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
