--- a/.github/workflows/all_detections.yml
+++ b/.github/workflows/all_detections.yml
@@ -1,13 +1,12 @@
 
-name: TOML/Mitre Validation
+name: All Detections to Elastic
 on:
-  push:
-    path:
-      - '**.toml'
   workflow_dispatch:
 jobs:
-  toml-validation:
+  elastic-detections-all:
     runs-on: ubuntu-latest
+    env:
+      ELASTIC_KEY: ${{ secrets.ELASTIC_KEY}}
     steps:
       - uses: actions/checkout@v3
       #https://github.com/actions/setup-python
@@ -17,6 +16,5 @@ jobs:
       - run: pip install --upgrade pip
       - run: pip install requests
       - run:
-          python development/validation.py
-      - run:
-          python development/mitre.py
+          python development/toml_to_json.py
+   
