--- a/.github/workflows/updated_detections.yml
+++ b/.github/workflows/updated_detections.yml
@@ -28,9 +28,9 @@ jobs:
         env:
           ELASTIC_KEY: ${{ secrets.ELASTIC_KEY }}
           CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
-
-      run: pip install --upgrade pip
-      run: pip install requests
-      run: python development/update_alert.py
+        run:
+          pip install --upgrade pip
+          pip install requests
+          python development/update_alert.py
 
    
