--- a/.github/workflows/updated_detections.yml
+++ b/.github/workflows/updated_detections.yml
@@ -28,6 +28,8 @@ jobs:
         env:
           ELASTIC_KEY: ${{ secrets.ELASTIC_KEY }}
           CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
+        run: pip install --upgrade pip
+        run: pip install requests
         run: python development/update_alert.py
 
    
